--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     margin-top: 1vh;
     border: 0.5vh solid #000000;
     box-shadow:
-    0 0 1vh 2vh rgba(0, 0, 0, 0.088);
+        0 0 1vh 2vh rgba(0, 0, 0, 0.088);
     text-align: center;
     justify-content: center;
     vertical-align: middle;
@@ -31,11 +31,13 @@
 }
 
 h1 {
+    margin-left: -2vw;
     font-size: 7vh;
     font-family: sans-serif;
     text-align: center;
-    /* margin-left: -1vh; */
     color: rgb(0, 0, 0);
+    margin-bottom: 1vh;
+    margin-top: 1vh;
 }
 
 body {
@@ -49,6 +51,11 @@ body {
     font-family: sans-serif;
     font-weight: bold;
     color: rgb(0, 0, 0);
+    border: 0.5vh solid black;
+    border-radius: 2vh;
+    width: 8vw;
+    text-align: center;
+    justify-content: center;
 }
 
 #p1 {
@@ -58,4 +65,21 @@ body {
     font-family: sans-serif;
     font-weight: bold;
     color: rgb(0, 0, 0);
+    border: 0.5vh solid black;
+    border-radius: 2vh;
+    width: 8vw;
+    text-align: center;
+    justify-content: center;
+}
+
+p {
+    font-size: 7vh;
+    font-family: sans-serif;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    margin: 0;
+}
+
+#turn {
+    margin-left: -2vw;
 }
